Variables de años

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <label>Capital inicial: <input type="number" id="capitalInicial" value=""></label>
     <label>Tipo de interés fijo (primer año): <input type="number" step="0.01" id="interesFijo" value="2.95"></label>
     <label>Diferencial fijo (años variables): <input type="number" step="0.01" id="diferencial" value="1.95"></label>
+    <label>Año Inicial: <input type="number" id="añoInicio" value="2012"></label>
+    <label>Año Final: <input type="number" id="añoFinal" value="2042"></label>
     <label>Mes de inicio del préstamo:
       <select id="mesInicio">
         <option value="0">Enero</option>
